--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <div id="container">
         <div id="editors">
             <div id="labels">
-                <span id="text" class="htmlLabel">HTML Editor</span>
-                <span id="text" class="cssLabel">CSS Editor</span>
-                <span id="text" class="jsLabel">JS Editor</span>
+                <span id="text" class="ht">LiveCodeEditor</span>
             </div>
             <div id="htmlEditor" class="editor"></div>
             <div id="cssEditor" class="editor"></div>
